--- a/src/bstreeview.css
+++ b/src/bstreeview.css
@@ -2,32 +2,37 @@
     padding: 15px;
 }
 
-.list-group.list-group-root {
+.bstreeview.list-group.list-group-root {
     padding: 0;
     overflow: hidden;
 }
 
-.list-group.list-group-root .list-group {
+.bstreeview.list-group.list-group-root .list-group {
     margin-bottom: 0;
 }
 
-.list-group.list-group-root .list-group-item {
+.bstreeview.list-group.list-group-root .list-group-item {
     border-radius: 0;
     border-width: 1px 0 0 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 
-.list-group.list-group-root > .list-group-item:first-child {
+.bstreeview.list-group.list-group-root > .list-group-item:first-child {
     border-top-width: 0;
 }
-
-.list-group.list-group-root > .list-group > .list-group-item {
+/* 
+.bstreeview.list-group.list-group-root > .list-group > .list-group-item {
     padding-left: 30px;
 }
 
-.list-group.list-group-root > .list-group > .list-group > .list-group-item {
+.bstreeview.list-group.list-group-root > .list-group > .list-group > .list-group-item {
     padding-left: 45px;
-}
+} */
 
-.list-group-item .glyphicon {
+.bstreeview.list-group-item .glyphicon {
     margin-right: 5px;
 }
+/* .bstreeview .indent {
+    padding-left: 45px;
+} */
